; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_s626.c_I2Chandshake.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_s626.c_I2Chandshake.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.comedi_device = type { i32 }

@P_I2CCTRL = common dso_local global i32 0, align 4
@P_MC2 = common dso_local global i32 0, align 4
@MC2_UPLD_IIC = common dso_local global i32 0, align 4
@I2C_BUSY = common dso_local global i32 0, align 4
@I2C_ERR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.comedi_device*, i32)* @I2Chandshake to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @I2Chandshake(%struct.comedi_device* %0, i32 %1) #0 {
  %3 = alloca %struct.comedi_device*, align 8
  %4 = alloca i32, align 4
  store %struct.comedi_device* %0, %struct.comedi_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @P_I2CCTRL, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @WR7146(i32 %5, i32 %6)
  %8 = load i32, i32* @P_MC2, align 4
  %9 = load i32, i32* @MC2_UPLD_IIC, align 4
  %10 = call i32 @MC_ENABLE(i32 %8, i32 %9)
  br label %11

11:                                               ; preds = %17, %2
  %12 = load i32, i32* @P_MC2, align 4
  %13 = load i32, i32* @MC2_UPLD_IIC, align 4
  %14 = call i32 @MC_TEST(i32 %12, i32 %13)
  %15 = icmp ne i32 %14, 0
  %16 = xor i1 %15, true
  br i1 %16, label %17, label %18

17:                                               ; preds = %11
  br label %11

18:                                               ; preds = %11
  br label %19

19:                                               ; preds = %28, %18
  %20 = load i32, i32* @P_I2CCTRL, align 4
  %21 = call i32 @RR7146(i32 %20)
  %22 = load i32, i32* @I2C_BUSY, align 4
  %23 = load i32, i32* @I2C_ERR, align 4
  %24 = or i32 %22, %23
  %25 = and i32 %21, %24
  %26 = load i32, i32* @I2C_BUSY, align 4
  %27 = icmp eq i32 %25, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %19
  br label %19

29:                                               ; preds = %19
  %30 = load i32, i32* @P_I2CCTRL, align 4
  %31 = call i32 @RR7146(i32 %30)
  %32 = load i32, i32* @I2C_ERR, align 4
  %33 = and i32 %31, %32
  ret i32 %33
}

declare dso_local i32 @WR7146(i32, i32) #1

declare dso_local i32 @MC_ENABLE(i32, i32) #1

declare dso_local i32 @MC_TEST(i32, i32) #1

declare dso_local i32 @RR7146(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
